update application flow without email

--- a/react/src/webshop/i18n/translated/ar.json
+++ b/react/src/webshop/i18n/translated/ar.json
@@ -1020,13 +1020,14 @@
             },
             "fund_request_email_setup": {
                 "continue_without_email": "المتابعة بدون بريد إلكتروني",
+                "continue_without_email_link": "المتابعة بدون عنوان بريد إلكتروني",
                 "email_required": "لمتابعة الطلب، يرجى إدخال عنوان البريد الإلكتروني الخاص بك",
                 "email_sent": "البريد الإلكتروني المرسل",
                 "email_sent_screen": "تم إرسال رسالة تأكيد بالبريد الإلكتروني",
-                "no_email_info": "إذا لم تترك عنوان بريد إلكتروني، فلن تتلقى رسائل أساسية مثل البريد الإلكتروني الذي يحتوي على رمز الاستجابة السريعة أو عند وجود معاملة. بالإضافة إلى ذلك، يمكنك فقط تسجيل الدخول باستخدام DigiD.",
+                "no_email_link": "ليس لدي عنوان بريد إلكتروني",
                 "sign_up_with_email": "تسجيل الدخول باستخدام عنوان البريد الإلكتروني",
-                "skip": "تخطي",
-                "warning": "ملاحظة!"
+                "no_email_info": "بدون عنوان بريد إلكتروني، لن تتلقى رسائل مهمة حول رصيدك ونفقاتك. يمكنك بعد ذلك تسجيل الدخول باستخدام DigiD فقط.",
+                "warning": "ملاحظة:"
             },
             "fund_request_overview": {
                 "application_summary": "نظرة عامة على الطلب",
@@ -2624,7 +2625,8 @@
         "bank_accounts": {
             "title": "الحساب البنكي",
             "iban": "رقم الحساب المصرفي الدولي (IBAN)",
-            "name": "التقادم"
+            "name": "التقادم",
+            "source": "المصدر"
         },
         "breadcrumbs": {
             "home": "الصفحة الرئيسية",
