--- a/react/src/webshop/i18n/translated/ru.json
+++ b/react/src/webshop/i18n/translated/ru.json
@@ -597,13 +597,14 @@
             },
             "fund_request_email_setup": {
                 "continue_without_email": "Продолжение без электронной почты",
+                "continue_without_email_link": "Продолжить без адреса электронной почты",
                 "email_required": "Чтобы продолжить рассмотрение заявки, введите адрес электронной почты",
                 "email_sent": "Электронная почта отправлена",
                 "email_sent_screen": "Подтверждение было отправлено по электронной почте",
-                "no_email_info": "Если вы не оставите адрес электронной почты, вы не будете получать важные сообщения, такие как письмо с QR-кодом или сообщение о транзакции. Кроме того, вы сможете войти в систему только с помощью DigiD.",
+                "no_email_link": "У меня нет адреса электронной почты",
                 "sign_up_with_email": "Войдите в систему, указав адрес электронной почты",
-                "skip": "Скип",
-                "warning": "Обратите внимание!"
+                "no_email_info": "Без адреса электронной почты вы не будете получать важные сообщения о ваших кредитах и расходах. Вы сможете войти в систему только с помощью DigiD.",
+                "warning": "Примечание:"
             },
             "fund_request_overview": {
                 "application_summary": "Обзор запросов",
@@ -2485,7 +2486,8 @@
         "bank_accounts": {
             "title": "Банковский счет",
             "iban": "IBAN",
-            "name": "Аскрипция"
+            "name": "Аскрипция",
+            "source": "Источник"
         },
         "breadcrumbs": {
             "home": "Главная",
