--- a/react/src/webshop/i18n/translated/uk.json
+++ b/react/src/webshop/i18n/translated/uk.json
@@ -597,13 +597,14 @@
             },
             "fund_request_email_setup": {
                 "continue_without_email": "Продовження без електронної пошти",
+                "continue_without_email_link": "Продовжити без адреси електронної пошти",
                 "email_required": "Щоб продовжити заповнення заявки, будь ласка, введіть свою електронну адресу",
                 "email_sent": "Електронний лист надіслано",
                 "email_sent_screen": "Підтвердження надіслано на електронну пошту",
-                "no_email_info": "Якщо ви не залишите адресу електронної пошти, ви не будете отримувати важливі повідомлення, такі як електронне повідомлення з QR-кодом або повідомлення про здійснення транзакції. Крім того, ви можете увійти в систему лише за допомогою DigiD.",
+                "no_email_link": "У мене немає адреси електронної пошти",
                 "sign_up_with_email": "Увійдіть за допомогою адреси електронної пошти",
-                "skip": "Пропустити.",
-                "warning": "Зауважте!"
+                "no_email_info": "Без адреси електронної пошти ви не будете отримувати важливі повідомлення про ваш кредит і витрати. Тоді ви зможете увійти в систему лише за допомогою DigiD.",
+                "warning": "Зауважте:"
             },
             "fund_request_overview": {
                 "application_summary": "Огляд запитів",
@@ -2485,7 +2486,8 @@
         "bank_accounts": {
             "title": "Банківський рахунок",
             "iban": "IBAN",
-            "name": "Припис"
+            "name": "Припис",
+            "source": "Джерело"
         },
         "breadcrumbs": {
             "home": "Головна сторінка",
